:bug: fix: Add gap in search comp products container

--- a/app/modules/search/styles.scss
+++ b/app/modules/search/styles.scss
@@ -149,7 +149,7 @@
   .searchTrendingProducts {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 10px;
   }
 
   .searchProduct {
